# dataPlatform

AnalyticTools/: BaseModel.py  api_runner.py
AnalyticTools/MachineLearning/KNN/Simple/Model/: Model.py  test.csv
AnalyticTools/MachineLearning/RF/Simple/Model/: Model.py
my-app/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1667125946531.mjs
my-app/rust/: Cargo.toml
my-app/rust/src/: func_plot.rs  lib.rs
my-app/rust/src/WebFunctions/: FileUpload.rs
my-app/rust/src/WebFunctions/Grid/: Cargo.toml
my-app/rust/src/WebFunctions/Grid/src/: lib.rs
my-app/rustFunctions/Grid/: Cargo.toml
my-app/rustFunctions/Grid/src/: Cell.rs  Coordinate.rs  lib.rs
my-app/rustFunctions/Grid/src1/: Cell.rs
my-app/rustFunctions/grid/: Cargo.toml
my-app/rustFunctions/grid/src/: Cell.rs  Coordinate.rs  lib.rs
my-app/src/routes/: +page.svelte
my-app/src/routes/BasicDataVisulisation/: +page.svelte
my-app/src/routes/KNN/: +page.svelte
my-app/src/routes/UploadandPlot/: +page.svelte  Grid.svelte  Modal.svelte
my-app/src/routes/apiTest/: +page.svelte
my-app/src/routes/test/: Grid.svelte
