[package]
name = "grid"
version = "0.1.0"
authors = ["llalma <lhulsmanbenson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
#wasm-bindgen = "0.2.74"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-test = "*"

rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = "0.4.5"

wasm-bindgen-futures = '*'

#For logging to web console
web-sys = { version = "0.3.39", features = ["console", "FileReader", "ProgressEvent", "HtmlInputElement", "FileList", "File"] }

#Function array inputs
js-sys = "*"

#polars-io = "*"

#itertools = "*"

#fstrings = "*"
# For reading CSV
#polars-core = {version = "*", features = ["lazy"]}
#polars-io = {version = "*", default-features = false, features = ["csv-file"]}

#polars = { git = "https://github.com/universalmind303/polars.git", rev = "4aede96" }


# our custom polars fork that works in wasm
[dependencies.polars]
features = [
    "dtype-full",
    # "list",
    "mode",
    "csv-file",
    "lazy",
    "strings",
    "temporal",
    "rows",
    "cum_agg",
    "rolling_window",
    "round_series",
    "arange",
    "diagonal_concat",
    "ndarray"
]
default-features = false
git =  "https://github.com/KivalM/polars.git"

#polars-lazy = "*"
#getrandom = { version = "*", features = ["js"] }


#[dev-dependencies]
#wasm-bindgen-test = "*"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

# when enabled, the wasm build takes forever so we disable it
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false